EPBDS-15286 REST API to execute and download test results